started mobile styling but need to fix whitespace error at bottom of page

--- a/styles/partials/_phone.scss
+++ b/styles/partials/_phone.scss
@@ -1,21 +1,32 @@
 @use "./variables" as *;
+@use "./mixins" as *;
 
 .phone {
   &__contain {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem 0;
-    height: calc(100vh - 132px);
+
+    @include tablet {
+      padding: 2rem 0;
+    }
   }
 
   &__container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     display: inline-block;
-    width: 360px;
     border: 6px $phone-dark solid;
-    border-radius: 6px;
+    // border-radius: 6px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
       rgba(0, 0, 0, 0.22) 0px 15px 12px;
+
+    @include tablet {
+      width: 360px;
+      border-radius: 6px;
+    }
   }
 }
 
@@ -116,7 +127,7 @@
   }
 
   30% {
-    left: -60px
+    left: -60px;
   }
   40% {
     left: -80px;
