--- a/styles/partials/_resets.scss
+++ b/styles/partials/_resets.scss
@@ -7,6 +7,7 @@
 }
 
 body {
+  height: 100%;
   color: rgb(186, 227, 124);
   background-color: #e6e6e6;
   font-family: "IBM Plex Mono", monospace, sans-serif;
