--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,3 +1,8 @@
 // Colors
 // NO COLORS IN VARIABLE NAMES
 $phone-dark: #0f0f0f;
+
+
+// Queries
+$tablet: 768px;
+$desktop: 1280px;
